--- a/SSProjekat/SSProjekat.vcxproj
+++ b/SSProjekat/SSProjekat.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Converter.cpp" />
     <ClCompile Include="Instruction.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Operand.cpp" />
@@ -134,7 +135,9 @@
     <ClCompile Include="ParserTest.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Converter.h" />
     <ClInclude Include="Exception.h" />
+    <ClInclude Include="InstructionTranslator.h" />
     <ClInclude Include="Tests.h" />
     <ClInclude Include="Instruction.h" />
     <ClInclude Include="Operand.h" />
