Implemented the InstructionTranslator class.

--- a/SSProjekat/SSProjekat.vcxproj.filters
+++ b/SSProjekat/SSProjekat.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Converter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InstructionTranslator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Operand.h">
