--- a/SSProjekat/SSProjekat.vcxproj
+++ b/SSProjekat/SSProjekat.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Converter.cpp" />
     <ClCompile Include="Instruction.cpp" />
+    <ClCompile Include="InstructionTranslator.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Operand.cpp" />
     <ClCompile Include="Parser.cpp" />
