--- a/SSProjekat/SSProjekat.vcxproj
+++ b/SSProjekat/SSProjekat.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -127,23 +127,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Assembler.cpp" />
     <ClCompile Include="Converter.cpp" />
     <ClCompile Include="Instruction.cpp" />
     <ClCompile Include="InstructionTranslator.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Operand.cpp" />
     <ClCompile Include="Parser.cpp" />
-    <ClCompile Include="ParserTest.cpp" />
+    <ClCompile Include="Test.cpp" />
     <ClCompile Include="Pool.cpp" />
     <ClCompile Include="RelocationTable.cpp" />
+    <ClCompile Include="Section.cpp" />
     <ClCompile Include="SymbolTable.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Assembler.h" />
     <ClInclude Include="Converter.h" />
     <ClInclude Include="Exception.h" />
     <ClInclude Include="InstructionTranslator.h" />
     <ClInclude Include="Pool.h" />
     <ClInclude Include="RelocationTable.h" />
+    <ClInclude Include="Section.h" />
+    <ClInclude Include="SectionHeaderTable.h" />
     <ClInclude Include="SymbolTable.h" />
     <ClInclude Include="Tests.h" />
     <ClInclude Include="Instruction.h" />
