--- a/SSProjekat/SSProjekat.vcxproj
+++ b/SSProjekat/SSProjekat.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Converter.cpp" />
     <ClCompile Include="Instruction.cpp" />
     <ClCompile Include="InstructionTranslator.cpp" />
+    <ClCompile Include="Linker.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Operand.cpp" />
     <ClCompile Include="Parser.cpp" />
@@ -143,8 +144,11 @@
   <ItemGroup>
     <ClInclude Include="Assembler.h" />
     <ClInclude Include="Converter.h" />
+    <ClInclude Include="Emulator.h" />
     <ClInclude Include="Exception.h" />
     <ClInclude Include="InstructionTranslator.h" />
+    <ClInclude Include="Linker.h" />
+    <ClInclude Include="Memory.h" />
     <ClInclude Include="Pool.h" />
     <ClInclude Include="RelocationTable.h" />
     <ClInclude Include="Section.h" />
